# Gaia-DR3SP-Client-Pyd

./: .gitignore  README.md  run_gaia.py
data/: README.md
indices/: README.md
src/: pyproject.toml  requirements.txt  setup.py
src/gaia_spectra_store/: __init__.py  _healpix.pyx  index_builder.py  xpsd_client.py
